[gd_scene load_steps=12 format=3 uid="uid://bm7tf4nfpnpbg"]

[ext_resource type="Script" uid="uid://cubpgu6jagqk5" path="res://Scripts/seed_altar.gd" id="1_5p56n"]
[ext_resource type="Texture2D" uid="uid://dmml1p8fymu13" path="res://Sprites/icons/seed.png" id="2_2dbbn"]
[ext_resource type="Texture2D" uid="uid://dum4qcycohuks" path="res://Sprites/Altar.png" id="2_x5sx4"]
[ext_resource type="Shader" uid="uid://dqt6dq6dk2eco" path="res://Shaders/ShineBG.gdshader" id="4_5p56n"]
[ext_resource type="Texture2D" uid="uid://i6asn0og0ggp" path="res://Sprites/Hud/textbox.png" id="4_hgdjo"]

[sub_resource type="ViewportTexture" id="ViewportTexture_2dbbn"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Animation" id="Animation_4q1ao"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Item:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.0736421, 1.92981, 0.0089277)]
}

[sub_resource type="Animation" id="Animation_32o6v"]
resource_name = "float"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Item:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.0736421, 1.92981, 0.0089277), Vector3(0.0736421, 2.17625, 0.0089277)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lphn8"]
_data = {
&"RESET": SubResource("Animation_4q1ao"),
&"float": SubResource("Animation_32o6v")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_4q1ao"]
size = Vector3(2.89049, 1, 2.27591)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xf3ju"]
shader = ExtResource("4_5p56n")
shader_parameter/shine_num = 8.0
shader_parameter/rotation_speed = 2.475
shader_parameter/light_magnitude = 2.0
shader_parameter/filter_distence = 0.86
shader_parameter/filter_magnitude = 0.895
shader_parameter/filter_minv = 0.75
shader_parameter/cut_inner_radius = 0.1
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/NOISE_speed = Vector2(0, 0)
shader_parameter/NOISE_magnitude = 0.0

[node name="TreasureAltar" type="Node3D"]
transform = Transform3D(-4.37114e-08, -0.5, 0.866025, 0, 0.866025, 0.5, -1, 2.18557e-08, -3.78552e-08, 0, 0, 0)
script = ExtResource("1_5p56n")

[node name="Altar" type="Sprite3D" parent="."]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0.252272, 2.92554, 0)
alpha_cut = 1
texture = ExtResource("2_x5sx4")

[node name="Item" type="Sprite3D" parent="."]
transform = Transform3D(0.149907, 2.22045e-16, 0, 0, 0.149907, 7.45058e-09, 4.44089e-16, -7.45058e-09, 0.149907, 0.0736421, 1.92981, 0.0089277)
billboard = 1
alpha_cut = 1
texture = ExtResource("2_2dbbn")

[node name="Item2" type="Sprite3D" parent="Item"]
transform = Transform3D(3.0511, 5.68434e-14, -4.9738e-14, -2.13163e-14, 3.0511, -3.57628e-07, 2.84217e-14, 3.57628e-07, 3.0511, 0.220114, -0.359375, -0.322088)
modulate = Color(0.998428, 0.952779, 0.904486, 1)
billboard = 1
alpha_cut = 2
alpha_scissor_threshold = 1.0
alpha_hash_scale = 1.08
alpha_antialiasing_mode = 1
texture = SubResource("ViewportTexture_2dbbn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lphn8")
}

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866026, -0.5, 0, 0.5, 0.866026, 0, 0.408578, 0.235893)
collision_layer = 2
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, -2.11758e-20, 1.77636e-13, 1.52466e-20, 1, 4.77485e-12, -1.77636e-13, -4.77485e-12, 1, -0.0156427, 2.98023e-08, -0.124862)
shape = SubResource("BoxShape3D_4q1ao")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -475.0
offset_top = 256.0
offset_right = 1244.0
offset_bottom = 555.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.539272, 0.503824)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_hgdjo")
region_rect = Rect2(0, 0, 709.908, 316.055)
patch_margin_left = 343
patch_margin_top = 146
patch_margin_right = 363
patch_margin_bottom = 153

[node name="Price" type="Label" parent="CanvasLayer/NinePatchRect"]
layout_mode = 0
offset_left = 333.783
offset_top = 79.3928
offset_right = 8105.78
offset_bottom = 1143.39
scale = Vector2(0.132417, 0.132417)
theme_override_font_sizes/font_size = 470
text = "Buy Pack for 3$"
horizontal_alignment = 1

[node name="Text" type="Label" parent="CanvasLayer/NinePatchRect"]
layout_mode = 0
offset_left = 337.492
offset_top = 168.71
offset_right = 16528.5
offset_bottom = 958.71
scale = Vector2(0.0634455, 0.0634455)
theme_override_font_sizes/font_size = 580
text = "Buy Pack for 3$"
horizontal_alignment = 1

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true

[node name="ColorRect" type="ColorRect" parent="SubViewport"]
material = SubResource("ShaderMaterial_xf3ju")
anchors_preset = -1
anchor_right = 1.005
anchor_bottom = 0.999
offset_left = 1.0
offset_top = -1.0
offset_right = -0.599976
offset_bottom = 0.0799561
grow_horizontal = 2
grow_vertical = 2

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
